--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #000;
-  color: #fff;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+#root {
+  height: 100%;
 }
